--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teleop-xyz",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.js",
   "files": [
@@ -31,6 +31,7 @@
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
     "nodemon": "^2.0.7",
+    "path-browserify": "^1.0.1",
     "webpack": "^5.25.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
