--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.4",
   "description": "",
   "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "dist",
     "src/*"
